--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>ACKeras</title>
     <meta name="description" content="ACKeras">
     <meta name="author" content="Andrea">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.css">
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
 
 <body style="margin-left: 40px">
@@ -15,6 +15,9 @@
     <div class="flex">
         <input id="file_input" type="file" name="data_file" />
         <input id="submit" type="submit" />
+    </div>
+    <div id="result_link">
+
     </div>
     <div id="container" style="margin-top: 20px">
         <div style="margin-bottom: 10px">
@@ -34,9 +37,9 @@
             <tr>
                 <th class="ph3">Column Names</th>
                 <th class="ph3">Categorical</th>
+                <th class="ph3">Datetime</th>
                 <th class="ph3">Drop</th>
                 <th class="ph3">Dependent</th>
-                <th class="ph3">Date</th>
             </tr>
 
         </table>
