Included classification in pipeline, fixed server issues, tryied other dataset and mocked some viz

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,7 @@
             <td>
                 <input id='supervised' type='checkbox' name='supervised' value='True'> Supervised </input>
                 <input id='drop_rest' type='checkbox' name='drop_rest' value='True'> Drop_rest </input>
+                <input type="number" id="insample" placeholder="Input the first n data insample" />
             </td>
         </div>
         <style>
